--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -38,8 +38,10 @@ body {
     margin-top: 50px;
     margin-left : 50px;
     padding: 10px;
+    padding-left : 30px;
     border: 1px solid #ccc;
     float: left;
+    width : 750px;
 }
 
 .welcome {
